# dev_search

./: README.md  devsearch.py  gsearch.py  install_data.py  pyproject.toml  requirements.txt  result.py  run.sh  search_results_page.py  setup.py  setup.sh  whitelist.py
devsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dev_search_solal/: base2.py  domains.db  install_data.py  setup.py  user_prompt.py  whitelist.py
